# transcriber

./: .gitignore  Dockerfile  Makefile  README.md  delete.py  example_transcription.txt  pyproject.toml  template.yaml  transcriber.py
src/lib/: enums.py
src/models/: anthro.py  client.py  openai.py
src/models/dynamo/: ticket.py
src/transcriber/: transcriber.py
