[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = ""
authors = ["Jpifer13 <jakepifer3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.12.0"
pynamodb = "^6.0.0"
boto3 = "^1.34.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
